objects/IDEXX_Active_Domain_Values__mdt.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>IDEXX Active Domain Values</label>
    <pluralLabel>IDEXX Active Domain Values</pluralLabel>
</CustomObject>